--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 		<!--  Mandatory picture when google maps API's used  -->
 		<img src="images/powered-by-google-on-white.png"></img><a href="TermsOfUseAndPrivacyPolicy.html"> Terms of Use and Privacy Policy Requirements</a>
 		<button onclick="clearSearch(99)">Clear</button>
+		<button onclick="exitSystem()">Exit</button>
 
 	</div>
 	
