--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
     <!-- AJAX, jQuery -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-	
+	<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+
 	<!-- You are here script -->
 	<script src="YouAreHere.js"></script>
 	
